Fix answer overlap detection.

--- a/app/assets/stylesheets/cards.css.scss
+++ b/app/assets/stylesheets/cards.css.scss
@@ -6,6 +6,10 @@
 	display: none;
 }
 
+div#overlap_error {
+	background: red;
+}
+
 div#card_code {
 	width: 1200px;
 	border: solid black 5px;
